Refactor CSS variables and class styles

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,11 @@ body{
   color: #32d296; /* green */
 }
 
+.code-notprivileged{
+  font-weight: 800;
+  color: #32d276; /* green mix*/
+}
+
 .code-privileged{
   font-weight: 800;
   color: #ff5c6a; /* red */
@@ -252,5 +257,6 @@ textarea{ resize:vertical; }
   .topbar{ flex-direction:column; align-items:flex-start; gap:10px; }
   .table th{ top: 108px; }
 }
+
 
 
